# cookbook

./: .gitignore  README.md  local-setup.md
gen-ai/agents/: video-agent.ipynb
gen-ai/agents/hf-agents/: hf-agents-intro.ipynb
gen-ai/google-ai/: 00-gemini-2-web-search.ipynb  Question.m4a  gemini-2-web-search.ipynb  pyproject.toml
gen-ai/google-ai/gemini-2/: pyproject.toml  web-search.ipynb
gen-ai/openai/agents/yfinance-openai-langgraph/: pyproject.toml  yfinance-stocks.ipynb
gen-ai/openai/gpt4/: gpt-4-functions.ipynb
gen-ai/smolagents-testing/: README.md  pyproject.toml
gen-ai/smolagents-testing/notebook/: smolagents-deepseek.ipynb
information-retrieval/sentence-transformers/: v3-fine-tuning.ipynb
machine-learning/encoders/sentence-transformers/: fine_tunning_with_st3_fully_executed.ipynb
semantic-analysis/: semantic-topic-change.ipynb  semantic_splitter_test.ipynb
